# ambient

./: LICENSE  README.md  package-lock.json
ambient/: app.json  package-lock.json  package.json
ambient/app/: index.tsx
ambient/app/(tabs)/: _layout.tsx  ipod.tsx
ambient/backend/: main.py  pyproject.toml
ambient/config/: api-url.util.ts  api.config.ts
ambient/scripts/: start-backend.js  start-dev.js
ambient/services/: location.service.ts  playlist.service.ts  spotify-api.service.ts  spotify-auth.service.ts  spotify-deeplink.service.ts  spotify-playlist.service.ts  spotify.service.ts
ambient/services/api/: api-client.service.ts  playlist-api.placeholder.ts  playlist-api.service.ts
ambient/styles/ipod/: constants.ts  container.styles.ts  index.ts  ipod-body.styles.ts  screen.styles.ts  wheel.styles.ts
backend/: main.py  pyproject.toml
